<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">help</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="homeim">I\'m</string>
    <string name="tovolunteer">Looking to Volunteer</string>
    <string name="forvolunteer">Looking for Volunteers</string>
    <string name="handraised">Different colored hands raised</string>
    <string name="sigininbutton">Sign In</string>
    <string name="createacctext">Not a member? Sign up</string>
    <string name="fillform">Fill the form below</string>
    <string name="eventname">Event Name:</string>
    <string name="startdate">Event Start date(MM/DD/YYYY):</string>
    <string name="enddate">Event end date(MM/DD/YYYY):</string>
    <string name="hrs">Hours of operation:</string>
    <string name="category">Category:</string>
    <string name="adress">Street address:</string>
    <string name="city">City:</string>
    <string name="state">State:</string>
    <string name="zip">Zipcode:</string>
    <string name="age">Age requirments:</string>
    <string name="addevent">Add Event</string>
    <string name="signup">Sign Up</string>
    <string name="signinsheet">Sign In Sheet</string>
    <string name="username">Username:</string>
    <string name="hrsworked">Hours:</string>
    <string name="personname">First &amp; Last Name:</string>
    <string name="oragization">Organization Name:</string>
    <string name="Organizationaddress">Organization Address:</string>
    <string name="phone">Organization Phone Number:</string>
    <string name="email">Email (username):</string>
    <string name="password">Password:</string>
    <string name="web">Organization Website(optional):</string>
    <string name="submit">Submit</string>
    <string name="addloc">Add Location</string>
    <string name="welcome">Welcome</string>
    <string name="addeventd">Add Events</string>
    <string name="myevents">My Events</string>
    <string name="findevents">Find Events</string>
    <string name="signin">Sign in</string>
    <string name="signinuser">Username</string>
    <string name="signinpass">Password</string>
    <string name="go">Go</string>
    <string name="signout">Sign Out</string>
    <string name="home">Home</string>
    <string name="add">Add Event</string>
    <string name="myevent">My Events</string>
    <string name="map">Map</string>
    <string name="to">to</string>
    <string name="defualttime">9:00</string>
    <string name="fiveoclock">5:00</string>
    <string name="permanent">Permanent Event</string>
    <string name="minage">Minimum Age</string>
    <string name="tax">ENID(TaxID)</string>
    <string name="passreset">Forgot your password?</string>
    <string name="passre">Password Reset</string>
    <string name="email1">Email</string>
    <string name="emailreset">Email</string>
    <string name="filter">Filter</string>
    <string name="search">Search</string>
    <string name="confirmpass">Confrim Password:</string>
    <string name="seemap">See on map</string>
    <string name="agee">Age:</string>
    <string name="currloc">Current</string>
    <string name="date">Date</string>
    <string name="guest">Guest</string>
    <string name="name">Full Name:</string>
    <string name="school">School Name:</string>
    <string name="studentnum">Student Number:</string>
    <string name="eventatt">Events Attended</string>
    <string name="passed">Past Events</string>
    <string name="s">score</string>
    <string name="lead">Leaderboard</string>
    <string name="leader">Looking to the Top</string>
    <string name="student">Student Name</string>
    <string name="hrsV">Hours Volunteered</string>

</resources>
