<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/big"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
      android:background="@drawable/reaching"
      
    android:scrollbarAlwaysDrawVerticalTrack="true" >

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/fillform"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="65sp" />

    <TextView
        android:id="@+id/passreset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView7"
        android:layout_marginTop="32dp"
        android:text="@string/startdate"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/passreset"
        android:layout_marginTop="36dp"
        android:text="@string/enddate"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:text="@string/category"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView8"
        android:layout_marginTop="30dp"
        android:text="@string/state"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="25sp" />

    <Spinner
        android:id="@+id/category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/textView7" />

    <Spinner
        android:id="@+id/States"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView9"
        android:layout_toRightOf="@+id/textView11" />

    <EditText
        android:id="@+id/eventCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView8"
        android:layout_alignBottom="@+id/textView8"
        android:layout_toLeftOf="@+id/endtime"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/StreetAddress"
        android:layout_marginTop="48dp"
        android:text="@string/city"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/Agereq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView10"
        android:layout_alignBottom="@+id/textView10"
        android:layout_toLeftOf="@+id/endtime"
        android:layout_toRightOf="@+id/textView10"
        android:ems="10"
        android:inputType="number"
        android:text="@string/minage" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/States"
        android:text="@string/zip"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView8"
        android:layout_alignParentLeft="true"
        android:text="@string/adress"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/StreetAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/category"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/eventZip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView11"
        android:layout_toRightOf="@+id/textView5"
        android:ems="10"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/eventname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/passreset"
        android:layout_toRightOf="@+id/textView2"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/score"
        android:text="@string/eventname"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/enddate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView6"
        android:layout_toRightOf="@+id/passreset"
        android:ems="10"
        android:inputType="date"
        android:text="@string/permanent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/enddate"
        android:layout_marginTop="45dp"
        android:layout_toLeftOf="@+id/eventname"
        android:text="@string/hrs"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/startdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/passreset"
        android:ems="10"
        android:inputType="date"
        android:text="@string/permanent" />

    <Spinner
        android:id="@+id/pmam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/ampm"
        android:layout_toRightOf="@+id/endtime" />

    <EditText
        android:id="@+id/StartTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignLeft="@+id/category"
        android:ems="10"
        android:inputType="time"
        android:text="@string/defualttime"
        android:width="80dp" />

    <Spinner
        android:id="@+id/ampm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/eventZip"
        android:layout_alignTop="@+id/endtime"
        android:layout_toRightOf="@+id/StartTime" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/StartTime"
        android:layout_alignRight="@+id/passreset"
        android:padding="0dp"
        android:text="@string/to"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/endtime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView12"
        android:layout_toRightOf="@+id/eventname"
        android:ems="10"
        android:inputType="time"
        android:text="@string/fiveoclock"
        android:width="80dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/addlocation"
        android:layout_alignParentLeft="true"
        android:text="@string/age"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="25sp" />

    <ImageButton
        android:id="@+id/addlocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/endtime"
        android:onClick="onClick"
        android:src="@drawable/addloc" />

</RelativeLayout>