<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     android:background="@drawable/paint"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="101dp"
        android:layout_gravity="center"
        android:text="@string/lead"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="60sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.02"
            android:text="@string/student"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:text="@string/hrsV"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="35sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.03" >

        <ListView
            android:id="@+id/listView1"
            android:layout_width="344dp"
            android:layout_height="match_parent" >

        </ListView>

        <ListView
            android:id="@+id/listView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             >
        </ListView>

    </LinearLayout>

</LinearLayout>